@@ -1,9 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
-<pkgmetadata>
-	<herd>perl</herd>
-	<upstream>
-		<remote-id type="cpan">ExtUtils-CChecker</remote-id>
-		<remote-id type="cpan-module">ExtUtils::CChecker</remote-id>
-	</upstream>
-</pkgmetadata>
