@@ -1,22 +1,0 @@
-# Copyright 1999-2015 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI=5
-RESTRICT="mirror"
-
-MODULE_AUTHOR=PEVANS
-MODULE_VERSION=0.02
-inherit perl-module
-
-DESCRIPTION="Use the lchown(2) and lutimes(2) system call from Perl"
-
-SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~x86-fbsd ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-IUSE=""
-
-RDEPEND=""
-DEPEND="
-	${RDEPEND}
-	dev-perl/ExtUtils-CChecker
-	virtual/perl-Module-Build"
