@@ -4,6 +4,9 @@
 
 *File-lchown-0.2 (21 Sep 2014)
 
+  14 Jun 2015; Martin Väth <martin@mvaeth.de>:
+  Version bump to fix renaming of Module-Build
+
   24 Sep 2014; Martin Väth <martin@mvaeth.de>:
   Add ~ARCH which probably work, even if untested
 
